--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html  class="cyan darken-4 test1">
 <head>
-  <title>RubyBelt</title>
+ <title>LogIn</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
 </head>
+
 <body>
-
-<%= yield %>
-
+	<header class="fixed1">
+	<ul id="dropdown1" class="dropdown-content">
+	  <li><a href="/">Home</a></li>
+	</ul>
+	<nav>
+	  <div class="nav-wrapper teal lighten-2 push1">
+	  	<% if current_user %>
+	    <a href="/users/<%= current_user.id %>" class="brand-logo logito">Home</a>
+	    <%else%>
+	    <a href="/" class="brand-logo logito">Logo</a>
+	    <%end%>
+	    <ul class="right hide-on-med-and-down">
+	     <!-- Dropdown Trigger -->
+	      	<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Menu<i class="material-icons right">arrow_drop_down</i></a></li>
+	      	<% if current_user %>
+	     	<li><form method="post" action="/sessions/logout">
+	       	<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">	
+			<input type="hidden" name="_method" value="delete">
+			<button type="submit" class="btn waves-light button out">Log out</button>
+	     	 </form></li>
+	     	 <% else %>
+	       	<li><a class="btn waves-light" href="/">Log In</a></li>
+	      <%end%>
+	    </ul>
+	  </div>
+	</nav>
+	</header>
+	<div class="container">
+	<%= yield %>
+	</div>
 </body>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 </html>
