--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,6 +21,6 @@
 		<input id="passConfirm" type="password" name="password_confirmation">
 		<input class="btn waves-light right1" type="submit" value="Join" >
 	</form>
-	<h5><a href="/sessions/login" class="title5">Already a member?</a></h5>
+	<h5><a href="/" class="title5">Already a member?</a></h5>
 </div>
 </div>
