--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,154 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+.white1 {
+	width: 100%;
+	height: 1px;
+	background-color: white;
+}
+
+.container {
+	width: 100% !important;
+}
+
+.container5 {
+	height: 1280px;
+	height: 900px !important;
+}
+
+.table1 * {
+	padding-left: 35px;
+}
+
+.container2 {
+	width: 889px;
+	height: 800px;
+
+}
+
+.push1 {
+	padding-right: 20px;
+}
+
+.center5 {
+	padding: 15px 89px;
+    padding-bottom: 62px;
+    margin-left: 25px;
+    margin-top: 20px;
+    width: 613px;
+    color: black;
+    display: inline-block;
+}
+
+
+.center1 {
+	padding: 15px 89px;
+    padding-bottom: 62px;
+    margin-left: 25px;
+    margin-top: 20px;
+    width: 613px;
+    color: black;
+    display: inline-block;
+}
+
+.center2 {
+	padding: 15px 89px;
+    padding-bottom: 62px;
+    margin-left: 25px;
+    margin-top: 20px;
+    width: 100%;
+    color: black;
+    display: inline-block;
+    border-radius: 20px;
+}
+
+.span1 {
+	color: red;
+}
+
+.right1 {
+	margin-left: 41%;
+    margin-top: 47px;
+}
+
+.right2 {
+	margin-left: 30%;
+    margin-top: 47px;
+}
+
+.words1 {
+	color: #4db6ac !important;
+}
+
+.logito {
+	margin-left: 20px;
+}
+.center2 {
+	text-align: center;
+}
+.center3 {
+	color: red;
+}
+
+.select1 {
+	border: 1px solid #9e9ea3;
+	color: #9e9ea3;
+	width: 64px;
+	display: inline-block;
+	margin: 34px auto;
+}
+
+.divy {
+	padding-bottom: 20px;
+	
+}
+
+.titles {
+	color: #9e9ea3;
+}
+
+.title2 {
+	color: #ececec;
+}
+
+.title5 {
+}
+
+.container3 {
+    width: 348px;
+    height: 150px;
+    display: block;
+    color: white;
+    padding-left: 20px;
+    margin-bottom: 50px;
+    border: 1px solid white;
+    background-color: #b74242;
+}
+
+.container6 {
+    width: 355px;
+    height: 110px;
+    display: block;
+    color: white;
+    padding-left: 20px;
+    margin-bottom: 50px;
+    border: 1px solid white;
+    background-color: #b74242;
+}
+
+
+.container3 p {
+	display: block; 
+
+
+}
+
+
+
+
+
+
+
